Released v1.0.0! Partial update of Readme.md
Released v1.0.0! Partial update of Readme.md